--- a/package.json
+++ b/package.json
@@ -2,9 +2,8 @@
   "name": "winXP",
   "version": "0.1.0",
   "private": true,
-  "author": "ShizukuIchi <shizukuichi@gmail.com>",
-  "homepage": "https://winxp.now.sh",
   "dependencies": {
+    "bootstrap": "^5.3.2",
     "lodash.samplesize": "^4.2.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
@@ -20,12 +19,6 @@
     "eject": "react-scripts eject",
     "now-build": "react-scripts build",
     "lint": "eslint src"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "plugin:prettier/recommended"
-    ]
   },
   "browserslist": [
     ">0.2%",
